# harness

./: .gitignore  CORE_REWRITE_PLAN.md  Cargo.toml  README.md  dictionary.txt  o200k_anchor_candidates.txt
crates/harness-chat-completions-protocol/: Cargo.toml
crates/harness-chat-completions-protocol/src/: lib.rs
crates/harness-chat-completions-transport/: Cargo.toml
crates/harness-chat-completions-transport/src/: lib.rs
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: commands.rs  main.rs  picker.rs
crates/harness-conversation-runtime/: Cargo.toml
crates/harness-conversation-runtime/src/: compaction.rs  lib.rs
crates/harness-core/: Cargo.toml
crates/harness-core/benches/: responses_request.rs  session_storage.rs
crates/harness-core/src/: actors.rs  analytics.rs  commands.rs  compact.rs  harness.rs  ipc.rs  lib.rs  provider_runtime.rs  provider_transport.rs  providers.rs  responses.rs  sessions.rs  steering.rs  subagents.rs  terminal.rs  tools.rs
crates/harness-core/src/apply_patch/: ast.rs  error.rs  fs.rs  matchers.rs  mod.rs  path.rs  plan.rs  report.rs  syntax.rs  txn.rs
crates/harness-core/src/harness/: compaction_prompts.rs  compaction_result.rs  error_classification.rs  persist_mode.rs  responses_input.rs  root_prompts.rs  slash_commands.rs  tests.rs  text.rs  tool_output_summary.rs  tool_records.rs
crates/harness-core/src/tools/grammars/: edit_file.lark  inspect.lark  locate.lark  mark_task_complete.lark  staged_patch.lark  terminal_open.lark  terminal_read.lark  terminal_write.lark
crates/harness-fuzz/: Cargo.toml
crates/harness-fuzz/src/: main.rs
crates/harness-model-api/: Cargo.toml
crates/harness-model-api/src/: lib.rs
crates/harness-openai-chat-protocol/: Cargo.toml
crates/harness-openai-chat-protocol/src/: lib.rs
crates/harness-openai-chat-transport/: Cargo.toml
crates/harness-openai-chat-transport/src/: lib.rs
crates/harness-provider/: Cargo.toml
crates/harness-provider/src/: lib.rs
crates/harness-responses-api/: Cargo.toml
crates/harness-responses-api/src/: lib.rs
crates/harness-responses-api/src/ws/: connection.rs  mod.rs  pool.rs
crates/harness-responses-protocol/: Cargo.toml
crates/harness-responses-protocol/src/: lib.rs
crates/harness-responses-transport/: Cargo.toml
crates/harness-responses-transport/src/: lib.rs
crates/harness-responses-transport/src/ws/: connection.rs  mod.rs  pool.rs
crates/harness-runtime-api/: Cargo.toml
crates/harness-runtime-api/src/: lib.rs
crates/harness-session-picker/: Cargo.toml
crates/harness-session-picker/src/: lib.rs
crates/harness-session-service/: Cargo.toml
crates/harness-session-service/src/: lib.rs
crates/harness-session-store/: Cargo.toml
crates/harness-session-store/src/: lib.rs
crates/harness-tool-api/: Cargo.toml
crates/harness-tool-api/src/: lib.rs
crates/harness-tool-execution/: Cargo.toml
crates/harness-tool-execution/src/: inventory.rs  lib.rs  path_correction.rs
crates/harness-tool-execution/src/edit_file/: mod.rs
crates/harness-tool-execution/src/goal/: mod.rs
crates/harness-tool-execution/src/inspect/: bytes.rs  cargo.rs  elf.rs  list.rs  mod.rs  process.rs  read.rs  search.rs  shell.rs  stat.rs  strings.rs  which.rs
crates/harness-tool-execution/src/terminal/: mod.rs  open.rs  read.rs  terminal_open.lark  terminal_read.lark  terminal_write.lark  write.rs
crates/harness-tui/: Cargo.toml
crates/harness-tui-rewrite/: ARCHITECTURE.md  Cargo.toml
crates/harness-tui-rewrite/benches/: performance.rs
crates/harness-tui-rewrite/src/: app.rs  control.rs  domain.rs  lib.rs  picker.rs  preview.rs  terminal.rs  view.rs
crates/harness-tui-rewrite/src/display/: ansi.rs  layout.rs  mod.rs
crates/harness-tui-rewrite/src/input/: fragment.rs  history.rs  layout.rs  mod.rs  projection.rs
crates/harness-tui-rewrite/src/runtime/: adapter.rs  mod.rs
crates/harness-tui-rewrite/src/transcript/: document.rs  layout.rs  mod.rs  presentation.rs
crates/harness-tui/benches/: input_editor.rs  transcript_index.rs  transcript_store.rs  transcript_view.rs
crates/harness-tui/src/: input.rs  lib.rs  transcript.rs  transcript_view.rs
crates/harness-web/: Cargo.toml
crates/harness-web/src/: main.rs
crates/token_inspector/: Cargo.toml
crates/token_inspector/src/: main.rs
