[workspace]
members = [
    "crates/harness-responses-api",
    "crates/harness-tui-rewrite",
    "crates/harness-tool-api",
    "crates/harness-model-api",
    "crates/harness-runtime-api",
    "crates/harness-responses-protocol",
    "crates/harness-session-store",
    "crates/harness-chat-completions-protocol",
    "crates/harness-chat-completions-transport",
    "crates/harness-conversation-runtime",
    "crates/harness-provider",
    "crates/harness-responses-transport",
    "crates/harness-session-service",
    "crates/harness-tool-execution",
    "crates/harness-cli",
    "crates/token_inspector",
]
resolver = "2"

[profile.release]
panic = "abort"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
crossfire = { version = "3.1.16", features = ["tokio"] }
crossterm = { version = "0.28", features = ["event-stream"] }
fff_search = { package = "fff-search", git = "https://github.com/dmtrkovalenko/fff" }
memchr = "2"
harness-responses-api = { path = "crates/harness-responses-api" }
harness-tui-rewrite = { path = "crates/harness-tui-rewrite" }
harness-tool-api = { path = "crates/harness-tool-api" }
harness-model-api = { path = "crates/harness-model-api" }
harness-runtime-api = { path = "crates/harness-runtime-api" }
harness-responses-protocol = { path = "crates/harness-responses-protocol" }
harness-chat-completions-protocol = { path = "crates/harness-chat-completions-protocol" }
harness-chat-completions-transport = { path = "crates/harness-chat-completions-transport" }
harness-session-store = { path = "crates/harness-session-store" }
harness-conversation-runtime = { path = "crates/harness-conversation-runtime" }
harness-provider = { path = "crates/harness-provider" }
harness-responses-transport = { path = "crates/harness-responses-transport" }
harness-session-service = { path = "crates/harness-session-service" }
harness-tool-execution = { path = "crates/harness-tool-execution" }




futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }

http = "1"
inventory = "0.3"
portable-pty = "0.9.0"
http-body-util = "0.1"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "tls12", "webpki-roots"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "http1", "tokio"] }
libc = "0.2"
ratatui = "0.29"
object = { version = "0.36", default-features = false, features = ["elf", "read_core", "std"] }
postcard = { version = "1", features = ["alloc"] }
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs = "0.5.8"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
thiserror = "2"
tiktoken-rs = "0.12.0"
tokio = { version = "1", features = ["fs", "macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
unicode-segmentation = "1"
unicode-width = "0.2"
url = "2"
zstd = "0.13"
