[package]
name = "harness-chat-completions-protocol"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
harness-model-api.workspace = true
harness-responses-protocol.workspace = true
harness-tool-api.workspace = true
sonic-rs.workspace = true
thiserror.workspace = true
