[package]
name = "harness-cli"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[[bin]]
name = "new_harness"
path = "src/main.rs"

[features]
dhat-heap = []

[dependencies]
anyhow.workspace = true
dhat = "0.3.3"
harness-core.workspace = true
harness-tui-rewrite.workspace = true
http.workspace = true
libc.workspace = true
serde.workspace = true
sonic-rs.workspace = true
thiserror.workspace = true
tokio.workspace = true
