[package]
name = "harness-core"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
crossfire.workspace = true
harness-responses-api.workspace = true
fff_search.workspace = true
http-body-util.workspace = true
http.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
libc.workspace = true
object.workspace = true
postcard.workspace = true
portable-pty.workspace = true
serde.workspace = true
sonic-rs.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
url.workspace = true
uuid = { version = "1", features = ["v4"] }
zstd.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "session_storage"
harness = false

[[bench]]
name = "responses_request"
harness = false
