[package]
name = "harness-openai-chat-transport"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
futures-util.workspace = true
harness-model-api.workspace = true
harness-openai-chat-protocol.workspace = true
harness-tool-api.workspace = true
sonic-rs.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
