[package]
name = "harness-responses-api"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
serde.workspace = true
sonic-rs.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
