[package]
name = "harness-responses-transport"
edition.workspace = true
license.workspace = true
publish.workspace = false
version.workspace = true

[dependencies]
futures-util.workspace = true
harness-model-api.workspace = true
harness-responses-protocol.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
