[package]
name = "harness-tool-execution"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
harness-tool-api.workspace = true
inventory.workspace = true
fff_search.workspace = true
libc.workspace = true
memchr.workspace = true
object.workspace = true
portable-pty.workspace = true
serde = { workspace = true, features = ["derive"] }
sonic-rs.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
tokio-util.workspace = true
