[package]
name = "harness-tui-rewrite"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
crossterm.workspace = true
futures-util.workspace = true
harness-runtime-api.workspace = true
harness-model-api.workspace = true
harness-tool-api.workspace = true
ratatui.workspace = true
tokio.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
criterion.workspace = true
harness-model-api.workspace = true

[[bench]]
name = "performance"
harness = false
