[package]
name = "harness-tui"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
crossterm.workspace = true
futures-util.workspace = true
harness-core.workspace = true
ratatui.workspace = true
syntect.workspace = true
tokio.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "input_editor"
harness = false

[[bench]]
name = "transcript_index"
harness = false

[[bench]]
name = "transcript_store"
harness = false

[[bench]]
name = "transcript_view"
harness = false
